[project]
name = "networkscanner"
version = "0.0.1"
description = "A Network scanner made with python3"
authors = [
    {name = "NuloCat",email = "nulocat@proton.me"},
    {name = "Rickzinho3",email = "rickzinho3@proton.me"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black (>=25.1.0,<26.0.0)",
    "pylint (>=3.3.6,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false